Add GrammarElementField-TypeValue feature
Rework grammar/type_system.py and grammar/grammar.py to add GRAMMAR support for REFS TypeValue and its ParentReqReference, FileReference, ExternalReference items.
Update the associated model and validation classes.
Add ExternalReference to the DOC and TBL HTML exports
Try to use constants instead of hardcoded Requirement Fieldname strings.

--- a/strictdoc/export/html/templates/_shared/requirement_table.jinja.html
+++ b/strictdoc/export/html/templates/_shared/requirement_table.jinja.html
@@ -84,6 +84,25 @@ data-status='{{ requirement.status.lower() }}'
     </tr>
     {%- endif %}
 
+    {%- if requirement.has_requirement_references("External") %}
+    <tr>
+      <th>
+        external&nbsp;refs:
+      </th>
+      <td>
+        <ul class="requirement_link">
+          {%- for external_ref in requirement.get_requirement_references("External") %}
+          <li>
+            <span class="requirement_link-external">
+              {{ external_ref.path if external_ref.path else "" }}
+            </span>
+          </li>
+          {%- endfor %}
+        </ul>
+      </td>
+    </tr>
+    {%- endif %}
+
     {# {% include "_shared/requirement_block/files_list.jinja.html" %} #}
     {%- if config.experimental_enable_file_traceability -%}
     {%- set requirement_file_links = traceability_index.get_requirement_file_links(requirement) %}
