--- a/strictdoc/export/html/templates/screens/document/table/main.jinja
+++ b/strictdoc/export/html/templates/screens/document/table/main.jinja
@@ -26,11 +26,6 @@
             {%- endif -%}
           </table>
         {%- endif -%}
-        {%- if document.free_texts -%}
-          {%- for free_text in document.free_texts %}
-            <div class="free_text">{{ renderer.render_free_text(document_type, free_text) }}</div>
-          {%- endfor -%}
-        {%- endif -%}
         </sdoc-node>
         <table class="content-view-table">
           <thead>
@@ -202,8 +197,8 @@
                   {%- endif -%}
                 </td>
               </tr>
-              {%- if section.free_texts -%}
-                {%- for free_text in section.free_texts -%}
+              {%- if section.has_freetext -%}
+                {%- for free_text in section.get_freetext() -%}
                   <tr>
                     <td class="content-view-td content-view-td-type">
                       Free text
